--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
         <h2 class="container-heading">
           Our Happy Clients
         </h2>
-        <ul class="section-clients-list">
-          <li class="section-clients-list-item">
+        <ul class="section-clients__list">
+          <li class="section-clients__list_item">
             <p class="section-clients-testimonial">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos velit ratione accusantium iste, eos facere veniam, veritatis ipsum vel quod praesentium consequuntur modi. Dignissimos at, ex repellendus magnam sunt voluptate.
             </p>
-            <div class="section-clients-user">
+            <div class="section-clients__user">
               <img src="/img/user.svg" alt="" class="section-clients-avatar">
               <div class="sectin-clients-user-info">
                 <div class="section-clients-username">
