--- a/index.html
+++ b/index.html
@@ -43,33 +43,35 @@
   </header>
   <main>
    <section class="section-hero">
-     <div class="container">
-       <h1 class="section-hero-heading">
-         This is simply a smarter way to make your legal online
-       </h1>
-       <p>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
-       </p>
-       <a href="" class="btn">
-         FREE 30 DAY TRIAL
-       </a>
-       <div class="section-hero-btn-description">
-         <span class="section-hero-ssl-icon"></span>
-         SSL SECURED CONNECTION
-       </div>
-     </div>
+    <div class="container hero-container">
+      <div class="hero-content">
+        <h1 class="section-hero-heading">
+          This is simply a smarter way to make your legal online
+        </h1>
+        <p class="section-hero__description">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.
+        </p>
+        <a href="" class="btn">
+          FREE 30 DAY TRIAL
+        </a>
+        <div class="section-hero-btn-description">
+          <span class="section-hero-ssl-icon"></span>
+          SSL SECURED CONNECTION
+        </div>
+      </div>
+    </div>
    </section>
 
    <section class="section-do">
       <div class="container">
-        <h2 class="section-heading">
+        <h2 class="section-heading text-center">
           What We Do
         </h2>
-        <p class="section-description">
+        <p class="section-do__description text-center">
           Lionic guides you on making decisions for all aspects of your end-of-life plans.
         </p>
-        <ul class="section-do-list">
-          <li class="section-do-item">
+        <ul class="section-do__list">
+          <li class="section-do__item">
             <svg xmlns="http://www.w3.org/2000/svg" width="68" height="66" viewbox="0 0 68 66">
               <defs>
                 <style>
@@ -88,7 +90,7 @@
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
             </p>
           </li>
-          <li class="section-do-item">
+          <li class="section-do__item">
             <svg xmlns="http://www.w3.org/2000/svg" width="86" height="64" viewbox="0 0 86 64">
               <defs>
                 <style>
@@ -108,7 +110,7 @@
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
             </p>
           </li>
-          <li class="section-do-item">
+          <li class="section-do__item">
             <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewbox="0 0 64 64">
               <defs>
                 <style>
@@ -127,7 +129,7 @@
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
             </p>
           </li>
-          <li class="section-do-item">
+          <li class="section-do__item">
             <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" viewbox="0 0 65 65">
               <defs>
                 <style>
