--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos velit ratione accusantium iste, eos facere veniam, veritatis ipsum vel quod praesentium consequuntur modi. Dignissimos at, ex repellendus magnam sunt voluptate.
             </p>
             <div class="section-clients__user">
-              <img src="/img/user.svg" alt="" class="section-clients-avatar">
+              <img src="/img/user.svg" alt="" class="section-clients__avatar">
               <div class="sectin-clients-user-info">
                 <div class="section-clients-username">
                   John Armstrong
@@ -178,8 +178,8 @@
             <p class="section-clients-testimonial">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos velit ratione accusantium iste, eos facere veniam, veritatis ipsum vel quod praesentium consequuntur modi. Dignissimos at, ex repellendus magnam sunt voluptate.
             </p>
-            <div class="section-clients-user">
-              <img src="/img/user.svg" alt="" class="section-clients-avatar">
+            <div class="section-clients__user">
+              <img src="/img/user.svg" alt="" class="section-clients__avatar">
               <div class="sectin-clients-user-info">
                 <div class="section-clients-username">
                   Elizabeth Martin
@@ -194,8 +194,8 @@
             <p class="section-clients-testimonial">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos velit ratione accusantium iste, eos facere veniam, veritatis ipsum vel quod praesentium consequuntur modi. Dignissimos at, ex repellendus magnam sunt voluptate.
             </p>
-            <div class="section-clients-user">
-              <img src="/img/user.svg" alt="" class="section-clients-avatar">
+            <div class="section-clients__user">
+              <img src="/img/user.svg" alt="" class="section-clients__avatar">
               <div class="sectin-clients-user-info">
                 <div class="section-clients-username">
                   Elizabeth Martin
