--- a/index.html
+++ b/index.html
@@ -212,19 +212,19 @@
 
     <section class="section-contacts">
       <div class="container">
-        <h2 class="section-heading">
+        <h2 class="section-contacts__heading">
           Contacts
         </h2>
-        <ul class="section-contacts-list">
+        <ul class="section-contacts__list">
           <li class="section-contacts-list-item">
-            <span class="section-contacts-icon"></span>
+            <span class="section-contacts-icon icon__gps"></span>
             <strong class="section-contacts-heading">Visit Us</strong>
             <div class="section-contacts-info">
               Duis autem vel eum iriure dolor in hendrerit in vulputate velit.
             </div>
           </li>
           <li class="section-contacts-list-item">
-            <span class="section-contacts-icon"></span>
+            <span class="section-contacts-icon icon__phone"></span>
             <strong class="section-contacts-heading">Call Us</strong>
             <div class="section-contacts-info">
               <a href="tel:+79876543210" class="section-contacts-link">
@@ -237,7 +237,7 @@
             </div>
           </li>
           <li class="section-contacts-list-item">
-            <span class="section-contacts-icon"></span>
+            <span class="section-contacts-icon icon__mail"></span>
             <strong class="section-contacts-heading">Email Us</strong>
             <div class="section-contacts-info">
               <a href="mailto:example@example.com" class="section-contacts-link">
