--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </a>
       <nav class="nav">
         <ul class="nav-list">
-          <li class="nav-item">
+          <li class="nav-item nav-item.is-active">
             <a href="" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
